--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,11 +9,14 @@ caches:
 params:
   homeInfoParams:
     Title: Hello there
-    Content: This is my personal portfolio, where I will publish CTF walkthroughs, personal projects and relative documentation
+    Content: This is my personal portfolio, where I will publish CTF walkthroughs, AI content, personal projects and relative documentation
   ShowReadingTime: true
   cover:
     linkFullImages: true
   ShowBreadCrumbs: true
+  ShowToc: true
+  TocOpen: true
+  ShowCodeCopyButtons: true
   socialIcons: # optional
     - name: "Github"
       url: "https://github.com/dzorzella"
